# random-coding

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: clang_tidy.cmake  warnings.cmake
src/: 20230402.cpp  20230410.cpp  20230424.cpp  20230503.cpp  20230604.cpp  20230612.cpp  main.cpp
